<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_note_list">NoteListActivity</string>
    <string name="title_activity_note">Edit Note</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="notes_menu">Notes</string>
    <string name="courses_menu">Courses</string>
    <string name="note_text">Note Text</string>
    <string name="note_title">Note title</string>
    <string name="nav_share_message">Don\'t you think you\'ve shared enough</string>
    <string name="nav_send_message">You can send here</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_menu">settings</string>
    <string name="display_name_title">Display Name</string>
    <string name="pref_title_email_address">Email Address</string>
    <string name="pref_default_display_name">Isaac Obuya</string>
    <string name="pref_default_email_address">me@yourhost.mail.com</string>
    <string name="pref_default_favorite_social">http://plus.google.com</string>
    <string name="pref_title_favorite_social">Favorite Social Media</string>
    <string name="general_settings_title">General Settings</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="channel_name">notekeeper</string>
    <string name="channel_description">notification for notekeeper app</string>
    <string name="backup_notes">Backup Notes</string>
    <string name="upload_notes">Upload Notes</string>
</resources>