<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:defaultValue="@string/pref_default_display_name"
        app:key="user_display_name"
        app:title="@string/display_name_title"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_email_address"
        android:key="pref_user_email_addres"
        android:title="@string/pref_title_email_address"
        app:useSimpleSummaryProvider="true"/>
    <ListPreference
        android:defaultValue="@string/pref_default_favorite_social"
        android:title="@string/pref_title_favorite_social"
        app:entries="@array/pref_entries_favorite_social"
        app:entryValues="@array/pref_values_favorite_social"
        app:key="user_favorite_social_network"
        app:title="@string/pref_title_favorite_social"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>